# Sotomiru

./: .env.example  .firebaserc  .gitignore  README.md  app.vue  compose.yaml  firebase.json  key.json  nuxt.config.ts  package-lock.json  package.json
components/: AppControlArea.vue  AppFooter.vue  AppHeader.vue  BingoCard.vue  BingoCard2.vue  BingoCard3.vue  BingoCard4.vue  BingoCardCarousel.vue  BingoCardCategoryIcon.vue  BingoCardDetail.vue  BingoCardDetailModal.vue  BingoCardView.vue  CardCarousel.vue  CellImageAIInspectionResultArea.vue  (+13 more)
functions/contract_proxy/: Dockerfile  pyproject.toml
functions/contract_proxy/contract_proxy/: config.py  main.py
functions/contract_proxy/contract_proxy/core/bingoCard/: request.py  route.py
functions/contract_proxy/contract_proxy/core/bingo_token/: request.py  response.py  route.py
functions/contract_proxy/contract_proxy/core/memory_nft/: request.py  response.py  route.py
functions/contract_proxy/contract_proxy/facades/firestore/: __init__.py  bingo_card_cell.py
functions/contract_proxy/contract_proxy/facades/thirdweb/: __init__.py  erc1155_bingo_token_contract.py  erc1155_memory_nft_contract.py
functions/contract_proxy/contract_proxy/models/: bingo_card.py
functions/create_complete_movie/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
functions/create_complete_movie/assets/: src.mov
functions/create_complete_movie/create_complete_movie/: config.py
functions/create_complete_movie/create_complete_movie/facades/firestore/: __init__.py  bingo_card.py  user.py
functions/create_complete_movie/create_complete_movie/facades/storage/: __init__.py  firestore.py
functions/create_complete_movie/create_complete_movie/facades/thirdweb/: __init__.py  erc1155_main_contract.py
functions/create_complete_movie/create_complete_movie/models/: bingo_card.py  user.py
functions/create_complete_movie/create_complete_movie/services/: create_movie_service.py  movie_builder.py  nft_service.py
(+53 files in other folders)
