[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["sey323 <sey323_nm@yahoo.co.jp>"]
readme = "README.md"
packages = [{include = "create_complete_movie"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
python-dotenv = "^1.0.0"
google-cloud-storage = "^2.13.0"
pydantic = "^2.4.2"
pillow = "^10.1.0"
thirdweb-sdk = "^3.1.1"
firebase-admin = "4.5.3"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
opencv-python = "^4.8.1.78" # docker上ではimageのopencvを使うため、不要

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79